<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">

    <com.chill.learn.ui.views.UserInfo
        android:id="@+id/res_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        app:hint="@string/username"
        app:value="@string/default_string" />

    <com.chill.learn.ui.views.UserInfo
        android:id="@+id/res_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hint="@string/password"
        app:value="@string/default_string" />

</LinearLayout>
