<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:contentPadding="0dp">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/avatar"
            android:outlineProvider="bounds"
            android:scaleType="centerCrop"
            android:src="@drawable/avatar" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:hint="@string/username"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:helperText="@string/helper_name"
            app:helperTextEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/password"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingHorizontal="26dp">

        <Button
            android:id="@+id/btn_login"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginEnd="26dp"
            android:backgroundTint="@color/primary"
            android:text="@string/btn_login"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_register"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/primary"
            android:text="@string/btn_register"
            android:textAllCaps="false" />

    </LinearLayout>

</LinearLayout>

